--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,14 @@ __pycache__/
 # C extensions
 *.so
 
+# Testing
+test/
+
 # Pickels
 *.pkl
+
+# vscode
+.vscode/
 
 # Distribution / packaging
 .Python
